# backlogbi

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
client/: Dockerfile  angular.json  package-lock.json  package.json
client/src/: index.html  styles.scss
client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
client/src/app/components/chart/: chart.component.html  chart.component.ts
client/src/app/models/: count.ts  issue_stats.ts  member_stats.ts  project.ts  setting.ts  stats_info.ts
client/src/app/pages/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
client/src/app/pages/settings/: settings.component.html  settings.component.scss  settings.component.ts
client/src/app/services/: api.service.ts
client/src/app/utils/: caluc.ts
client/src/environments/: environment.docker.ts
helpers/: __init__.py  backlog.py  word_cloud.py
models/: __init__.py  menu.py  setting.py
server/: .dockerignore  .gitignore  Dockerfile  Pipfile  analyze.py  main.py  manage.py
server/backlogbi/: __init__.py  analyze.py  models.py  views.py
views/: __init__.py  base_view.py  dashboard_view.py  setting_view.py
