[tool.poetry]
name = "backlogbi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
plotly = "^4.7"
plotly-express = "^0.4.1"
streamlit = "^0.60.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
